Fix app button spacing

--- a/src/components/app_download/AppDownload.module.scss
+++ b/src/components/app_download/AppDownload.module.scss
@@ -57,8 +57,8 @@
 .downloadBtns2 {
   display: flex;
   flex-flow: wrap;
-  justify-content: center;
-  width: 50%;
+  justify-content: flex-end;
+  width: 75%;
   z-index: 2;
   @media screen and (max-width: $medium) {
     width: 100%;
@@ -66,7 +66,7 @@
   button {
     width: 40%;
     max-width: 170px;
-    margin: 5px;
+    margin: 10px;
     @media screen and (max-width: $medium) {
       margin: 0;
       padding: 10px;
@@ -78,5 +78,6 @@
 }
 .appDownloadButtonContainer {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
+  padding-right: 20px;
 }
